--- a/metadata.yaml
+++ b/metadata.yaml
@@ -14,4 +14,4 @@ sources:
     url: https://digital.slub-dresden.de/id426604954
     license: public domain
     principal: true
-imslp:
+imslp: Miserere_in_G_minor_(Kolberer,_Cajetan)
